--- a/resources/config.yml
+++ b/resources/config.yml
@@ -14,4 +14,39 @@ X3:
 Y3: 
 Z3: 
 TEXT3:
+# Text #4
+X4: 
+Y4: 
+Z4: 
+TEXT4:
+# Text #5
+X5: 
+Y5: 
+Z5: 
+TEXT5:
+# Text #6
+X6: 
+Y6: 
+Z6: 
+TEXT6:
+# Text #7
+X7: 
+Y7: 
+Z7: 
+TEXT7:
+# Text #8
+X8: 
+Y8: 
+Z8: 
+TEXT8:
+# Text #9
+X9: 
+Y9: 
+Z9: 
+TEXT9:
+# Text #10
+X10: 
+Y10: 
+Z10: 
+TEXT10:
 ...
